Added compilation to IfTrue Statement, if True Statement now has better returns in the else branch, had to fix tests accordingly